# fcitx5-voice

./: .gitignore  CMakeLists.txt
.github/workflows/: ci.yml
src/: CMakeLists.txt  macos.mm  platform.h  voice-addon.conf.in.in  voice.conf.in  voice.cpp  voice.h
